test/semantic_errors/invalid_unaryop1.mc
void main() {
    bool a;
    int c;
    c = -a;
}